tests/implicit_coercion_specifiers_wrap_dupeparam_poly.test
let _ = fun[C[+;+]] implicit{C: _ Q} Q: ([T]. {x: T; y: T} => C[T; T]) -> 0;
####
TypeError: Invalid implicit coercion definition. Coercion parameters are not uniquely determined by input type.
let _ = fun[C[+;+]] implicit{C: _ Q} Q: ([T]. {x: T; y: T} => C[T; T]) -> 0;
                                  ^
